--- a/prefect.yaml
+++ b/prefect.yaml
@@ -21,15 +21,15 @@ pull:
 
 # the deployments section allows you to provide configuration for deploying flows
 deployments:
-- name: null
+- name: opls-end-of-run-workflow
   version: null
-  tags: []
+  tags: [opls]
   description: null
   schedule: {}
   flow_name: null
-  entrypoint: null
+  entrypoint: end_of_run_workflow.py:end_of_run_workflow
   parameters: {}
   work_pool:
-    name: null
+    name: opls-work-pool
     work_queue_name: null
     job_variables: {}
