--- a/prefect.yaml
+++ b/prefect.yaml
@@ -15,7 +15,7 @@ push: null
 # pull section allows you to provide instructions for cloning this project in remote locations
 pull:
 - prefect.deployments.steps.git_clone:
-    repository: git@github.com:NSLS2/opls-workflows.git
+    repository: https://github.com/NSLS2/opls-workflows.git
     branch: main
     access_token: null
 
